# plexum

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  sandbox.cc
cmake/: catch.cmake
include/omg/: graph.h
include/plexum/: graph.h
test/: graph_test.cc  test_main.cc
